--- a/zadatak.css
+++ b/zadatak.css
@@ -8,7 +8,7 @@ body
 nav
 {
     background-color: white;
-    height: 80px;   
+    height: 4.166667vw;   
     display:flex;
     justify-content: center;
     align-items: center;
@@ -18,21 +18,21 @@ nav
 .Navbar
 {
     margin: 0px;    /* Centriranje navigation bara */
-    height: 69.33px;
+    height: 3.61094vw;
     justify-content: space-between;
     align-items: center;
     position: absolute;
     display: flex;
-    left: 40px;
-    right: 40px;
+    left: 2.08333vw;
+    right: 2.08333vw;
     top: 50%;
     transform: translateY(-50%); 
 }
 
 .Navbar img
 {
-    height: 40px;
-    width:186.67px;
+    height: 2.08333vw;
+    width:9.7222396vw;
 }
 
 .Navbar ul
@@ -47,15 +47,15 @@ nav
 
 .Navbar ul li
 {
-    margin: 15px;
+    margin: 0.78125vw;
 }
 
 .Navbar ul li a
 {
     color: #1C1E53;
     text-decoration: none;  /* Removes underlines which are there by default */
-    height: 40px;
-    line-height: 32px;
+    height: 2.0833vw;
+    line-height: 1.6667vw;
     font-weight: 400;
     font-family: "Roboto";
 }
@@ -66,15 +66,16 @@ button
     background-color: #FFFFFF;
     cursor: pointer;    /* Displays hand on hover, instead of arrow by default */
     font-family: 'Roboto';
-    width: 100px;
-    height: 40px;
-    line-height: 32px;
+    width: 8.889vw;
+    height: 3.611vw;
+    line-height: (5/3)vw;
     font-weight: 400;
-    border-width: 1px;
+    border-width: (5/96)vw;
     border-color: #5E3BEE;
-    border-radius: 3px;
-    line-height: 32px;
+    border-radius: 0.15625vw;
+    line-height: (5/3)vw;
     font-weight: 400;
+    font-size: 1.111vw;
 }
 
 button:hover
@@ -100,7 +101,7 @@ header
 {
     flex-grow: 1;
     max-width: 50%;
-    padding: 50px;
+    padding: 2.6041667vw;
     box-sizing: border-box;
 }
 
@@ -113,25 +114,26 @@ header
 h3
 {
     font-family: "Roboto";
-    font-size: 21.33px;
+    font-size: 1.1109375vw;
     font-weight: 600;
-    line-height: 32px;
+    line-height: 1.666667vw;
     color:#1C1E53;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 1.041667vw;
+    margin-bottom: 1.041667vw;
 }
 
 h1
 {
     font-family: 'Roboto';
     margin: 0;
-    font-size: 74.67px;
+    font-size: 3.8890625vw;
     font-weight: 700;
-    line-height: 89.6px;
+    line-height: 4.666666666666667vw;
     color:#1C1E53;
 }
 
-h3:nth-child(3){
+h3:nth-child(3)
+{
     font-weight: 400;
 }
 
@@ -159,7 +161,7 @@ h3:nth-child(3){
 
 .MyExpertise
 {
-    padding: 100px 40px 100px 40px;
+    padding: 5.208333vw 2.083333vw 5.208333vw 2.083333vw
 }
 
 .MyExpertise h3,
@@ -168,22 +170,23 @@ h3:nth-child(3){
     margin: 0;
 }
 
-.MyExpertise h3{
-    margin-bottom:20px;
+.MyExpertise h3
+{
+    margin-bottom:1.04166667vw;
 }
 
 h2
 {
     font-family: 'Roboto';
     font-weight: 700;
-    font-size: 64px;
-    line-height: 76.8px;
+    font-size: 3.3333vw;
+    line-height: 4vw;
 }
 
 .Portfolio
 {
-    margin-top: 100px;
-    margin-bottom: 40px;
+    margin-top: 5.208333vw;
+    margin-bottom: 2.08333vw;
 }
 
 .Portfolio ul
@@ -200,18 +203,18 @@ h2
 {
     flex-grow: 1;
     max-width: 50%;
-    padding: 10px;
-    margin: 40px;
+    padding: 0.52083vw;
+    margin: 2.08333vw;
     background-color: #F5FCFF;
-    border-radius: 10px;
-    padding-bottom: 20px; /* Adjust as needed */
-    border-bottom: 2px solid transparent; 
+    border-radius: 0.52083vw;
+    padding-bottom: 1.041667vw; /* Adjust as needed */
+    border-bottom: 0.1041667vw solid transparent; 
 }
 
 .MyExpertise li:hover
 {
     border-bottom-color:#5E3BEE;
-    border-width: 5px;
+    border-width: 0.2604167vw;
 }
 
 .Portfolio ul li:first-child{
@@ -223,10 +226,10 @@ h2
 }
 
 .Portfolio ul li img{
-    margin: 10px;
-    padding: 5px;
+    margin: 0.52083vw;
+    padding: 0.2604167vw;
     background-color: #FFFFFF;
-    border-radius: 20px;
+    border-radius: 1.04167vw;
     width: 15%;
     height: auto;
 }
@@ -241,9 +244,9 @@ h2
     justify-content: center;
     align-items: stretch;
     background-color: #FFFFFF;
-    height:800px;
+    height:41.667vw;
     position: relative;
-    border-bottom: 2px solid #5E3BEE;
+    border-bottom: 0.141667vw solid #5E3BEE;
 }
 
 .AboutImage,
@@ -251,7 +254,7 @@ h2
 {
     flex-grow:1;
     max-width: 60%;
-    padding: 40px;
+    padding: 2.08333vw;
     box-sizing: border-box;
 }
 
@@ -264,11 +267,11 @@ h2
 
 .AboutImage img
 {
-    width: Auto; 
-    height: 100%;
+    width: 32.361vw; 
+    height: 41.875vw;
     object-fit: cover; 
     object-position: center; 
-    padding-right: 50px;
+    padding-right: 2.604167vw;
 }
 
 .AboutText
@@ -293,9 +296,9 @@ h2
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 150px;
-    margin-left: 40px;
-    margin-right: 40px;
+    margin-top: 7.8125vw;
+    margin-left: 2.0833vw;
+    margin-right: 2.0833vw;
 }
 
 .PortfolioHeader
@@ -316,20 +319,22 @@ h2
 {
     color: #FFFFFF;
     background-color: #E62872;
+    font-size: 1.11094vw;
+    line-height: 1.6vw;
     display: flex;
     justify-content: center; /* Centrira tekst horizontalno */
     align-items: center; /* Centrira tekst vertikalno */
-    width: 200px;
-    height: 60px;
-    border-radius: 10px;
+    width: 10.41667vw;
+    height: 3.125vw;
+    border-radius: 0.52083vw;
     border: none; /* Brise border koji po defaultu postoji */
 }
 
 .PortfolioHeader button img
 {
-    height:25px;
-    width:25px;
-    margin-right:20px;
+    height:1.302083vw;
+    width:1.302083vw;
+    margin-right:1.041667vw;
 }
 
 .Cards ul
@@ -340,13 +345,13 @@ h2
     align-items: center;
     list-style: none;
     padding: 0px;
-    margin-top:100px;
+    margin-top:5.20833vw;
 }
 
 .Cards li
 {
-    margin: 40px;       /* Razmak izmedu boxova (vrijedi za svaki box jer uzimamo sve <li> elemente)*/
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Dodaje sjenu box-u */
+    margin: 2.0833vw;       /* Razmak izmedu boxova (vrijedi za svaki box jer uzimamo sve <li> elemente)*/
+    box-shadow: 0 0 0.520833vw rgba(0, 0, 0, 0.3); /* Dodaje sjenu box-u */
 }
 
 .Cards li:first-child
@@ -362,24 +367,25 @@ h2
 .Cards li img   /* Vrijedi za sve slike (iz svakog box-a) */
 {
     width: 100%; /* Set the width of the images to 100% of their container */
-    height: 100%; /* Set the height of the images to 100% of their container */
+    height: 20.833vw; /* Set the height of the images to 100% of their container */
     object-fit: cover; 
 }
 
 .Cards li h3
 {
-    margin-left: 25px;
-    margin-right: 25px;
+    margin-left: (125/96)vw;
+    margin-right: (125/96)vw;
 }
 
 .Cards li button
 {
     color: #1C1E53;
     position:relative;      /* Relativno u odnosu na box, da je absolute View In Dribbble bi bio van boxa */
-    margin-left: 25px;
-    margin-bottom: 20px;
-    width: 150px;
-    height: 40px;
+    margin-left: (125/96)vw;
+    margin-bottom: 1.09375vw;
+    width: 7.8125vw;
+    font-size: 0.9724vw;
+    height: (25/12)vw;
     text-align: left;
     border-left:none;
     border-right:none;
@@ -401,9 +407,9 @@ h2
 .Testimonial
 {
     background-color: #F5FCFF;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 100px;
+    padding-left: 2.0883vw;
+    padding-right: 2.0883vw;
+    padding-top: 5.2083vw;
 }
 
 .Testimonial h3,
@@ -419,16 +425,16 @@ h2
     justify-content:space-between;
     align-items: center;
     padding: 0px;
-    margin-top:100px;
+    margin-top:5.2083vw;
     list-style: none;
 }
 
 .Testimonial li
 {
-    margin: 50px;
-    padding: 30px;
+    margin: 2.6042vw;
+    padding: 1.5625vw;
     border-radius: 5px;
-    border: 2px solid #006B6A;
+    border: 0.1042vw solid #006B6A;
     display: flex;
     flex-direction:column;
     justify-content:space-between;
@@ -455,34 +461,35 @@ h2
 {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;;
+    margin-bottom: 1.042vw;
 }
 
 .person img
 {
-    width:100px;
-    margin-right: 20px;
+    width:5.2083vw;
+    margin-right: 1.042vw;
 }
 
 .Testimonial li h3
 {
-    margin-top: 50px;
-    margin-bottom: 30px;
+    margin-top: 2.6042vw;
+    margin-bottom: 1.5625vw;
 }
 
 .person-info
 {
     flex-grow: 1;
+    margin-left: 1.042vw;
 }
 
 .person-info h4
 {
     margin:0px;
     padding:0px;
-    margin-top:10px;
-    margin-bottom:10px;
+    margin-top:0.5201vw;
+    margin-bottom:0.5201vw;
     font-family:"Roboto";
-    font-size: 20px;
+    font-size:1.04167vw;
 }
 
 .person h3
@@ -510,8 +517,8 @@ h2
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 50px;
-    padding-top: 100px;
+    margin: 2.6042vw;
+    padding-top: 5.20833vw;
 }
 
 .Section-Title h3,
@@ -519,24 +526,24 @@ h2
 {
     margin: 0;
     text-align: center;
-    padding-bottom: 50px;   /* Razmak izmedu h3 i h2 20 px od dolje */
+    padding-bottom: 2.6042vw;   /* Razmak izmedu h3 i h2 20 px od dolje */
 }
 
 .Form
 {
     display: flex;
     flex-direction: column;
-    max-width: 800px; /* Adjust the max-width as needed */
+    max-width: 41.667vw; /* Adjust the max-width as needed */
     width: 100%; /* Ensure the form takes up the available width */
     margin: 0 auto; /* Center the form horizontally */
-    margin-top:50px;
+    margin-top: 2.6042vw;
 }
 
 .form-group
 {
-    margin-bottom: 10px;
-    margin-right:20px;
-    margin-left:20px;
+    margin-bottom: 0.52083vw;
+    margin-right: 1.042vw;
+    margin-left: 1.042vw;  
 }
 
 .name-group
@@ -547,42 +554,43 @@ h2
 
 .name-group .form-group
 {
-    width: calc(50% - 7.5px);
+    width: calc(50% - 0.391vw);
 }
+
 
 .topic-group
 {
-    margin-left: 20px;
-    margin-right:20px;
+    margin-left: 1.04167vw;
+    margin-right: 1.04167vw;
 }
 
 .topic-group .form-group
 {
-    width: calc(100% - 15px);
+    width: calc(100% - 0.78125vw);
 }
 
 .message-group
 {
-    margin-left: 20px;
-    margin-right:20px;
+    margin-left: 1.04167vw;
+    margin-right: 1.04167vw;
 }
 
 .message-group .form-group
 {
-    width: calc(100% - 38px);
+    width: calc(100% - 1.9792vw);
 }
 
 .contact-info-group
 {
     display: flex;
     justify-content: space-between;
-    margin-right:20px;
-    margin-left:20px;
+    margin-right: 1.042vw;
+    margin-left: 1.042vw;
 }
 
 .contact-info-group .form-group
 {
-    width: calc(50% - 7.5px);
+    width: calc(50% - 0.391vw);
     
     /* Adjust the width as needed */
 }
@@ -601,8 +609,8 @@ textarea,
 select
 {
     width: 100%;
-    padding: 10px;
-    border-radius: 5px;
+    padding: 0.6vw;
+    border-radius: 8px;
     border: 2px solid #5E3BEE;
     resize: none;
 }
@@ -614,9 +622,9 @@ select
 
 .checkbox-group
 {
-    margin-left: 20px;
-    margin-right: 20px;
-    font-size: 12px;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    font-size: 1.04167vw;
 }
 
 .button-group .form-group
@@ -625,6 +633,7 @@ select
     justify-content: center;
     align-items: center;
 }
+
 
 
 
@@ -638,7 +647,7 @@ footer
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-bottom:50px;
+    margin-bottom: 1vw;
 }
 
 .footer-up
@@ -646,15 +655,15 @@ footer
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin:50px 40px 50px 40px;
+    margin: 2vw 1vw 2vw 1vw;
     background-color: #F5FCFF; 
     width: calc(100% - 75px)
 }
 
 .footer-up img
 {
-    height: 40px;
-    width: 186.67px;
+    height: 2.08333vw;
+    width: 9.7222396vw;
 }
 
 .footer-up ul
@@ -680,14 +689,16 @@ footer
     line-height: 32px;
     font-weight: 400;
     font-family: "Roboto";
+    font-size: 1vw;
 }
 
 .footer-up .social-media img
 {
-    width:20px;
-    height:20px;
-    margin-left: 10px;
+    width:1.5vw;
+    height:1.5vw;
+    margin-left: 1vw;
 }
+
 
 .footer-down
 {
@@ -698,7 +709,7 @@ footer
     width: calc(100% - 75px);
     border-top: 1px solid #1C1E53;
     margin-bottom:50px;
-    padding-top:25px;
+    padding-top:1vw;
 }
 
 .footer-down ul
@@ -713,7 +724,7 @@ footer
 
 .footer-down ul li
 {
-    margin: 0 10px;
+    margin: 0 0.7vw;
 }
 
 .footer-down ul li a
